<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_browse_products"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.almootassem.android.assignment2.BrowseProductsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <TextView
                android:text="@string/product_name"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/name_edittext"
                android:layout_width="0dp"
                android:enabled="false"
                android:layout_weight="0.6"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <TextView
                android:text="@string/product_desc"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/desc_edittext"
                android:layout_width="0dp"
                android:enabled="false"
                android:layout_weight="0.6"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <TextView
                android:text="@string/product_price_cad"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/cad_price_edittext"
                android:layout_width="0dp"
                android:enabled="false"
                android:layout_weight="0.6"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <TextView
                android:text="@string/product_price_bitcoin"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/bitcoin_price_edittext"
                android:layout_width="0dp"
                android:enabled="false"
                android:layout_weight="0.6"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:id="@+id/previous_product"
            android:text="@string/previous"
            android:layout_weight="0.33"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/delete_product"
            android:text="@string/delete"
            android:layout_weight="0.33"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle" />
        <Button
            android:id="@+id/next_product"
            android:text="@string/next"
            android:layout_weight="0.33"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
